# study_python

./: .env.dev  .gitignore  README.md  WebHelper.py  abstract_factory.py  file.yaml  file_csv.py  hamcUtils.py  hanoi.py  io_test.py  log.py  main.py  pyproject.toml  read_ini.py  read_yaml.py  run.py  study_KNN.py  study_exception.py  test.py  test_assert.py  test_asyncio.py  test_datetime.py  test_faker.py  test_lambda.py  test_multiprocessing.py  test_name.py  test_os.py  test_pandas.py  test_platform.py  test_pyttsx3.py  test_time.py  test_uiautomator2.py  thread_test.py  随机数.py
Config/: DBConfig.py  __init__.py
Utils/: DBUtils.py  FileUtils.py  Singleton.py  YamlUtils.py  __init__.py  log.py  log_utils.py  path.py  study_faker.py  test_pyttsx3.py  yamlUtil.py
common/: WebHelper.py
config/: config.py  mysql.ini
data_file/: config.yaml
file/: test_ffmpeg.py
python调用js/: mian.py
test_abc/: main.py
test_dataclass/: main.py
test_enum/: main.py
test_locust/: main.py
test_orm/: test_sqlalchemy.py
test_pandas/: main.py
test_pyautogui/: main.py
test_pywifi/: main.py
test_typing/: mian.py
test_with/: main.py
utils/: config_utils.py  db_utils.py  hamc_utils.py  log_utils.py  orm_utils.py  path_utils.py  wrapper.py
多线程、多进程、协程/: test_asyncio.py  test_threading.py  协程asyncio.py  协程gevent.py  线程池.py  进程池.py
学习内置包/: argpars启动参数.py  ast-解析抽象语法树.py  asyncio异步.py  dataclass数据类.py  datetime时间模块.py  demo_argpars启动参数.py  demo_ast-解析抽象语法树.py  demo_asyncio异步.py  demo_contextvars异步上下文.py  demo_dataclass数据类.py  demo_datetime时间模块.py  demo_enum枚举类.py  demo_io.py  demo_pathlib路径操作.py  demo_protocol鸭子类型.py  demo_socket.py  demo_thread线程操作.py  demo_tkinter.py  enum枚举类.py  inspect-解析py文件.py  io_test.py  js_test.py  path_lib_test.py  protocol鸭子类型.py  thread线程操作.py  tkinter_test.py
学习图像处理opencv/: main.py  人脸识别.py
学习第三方包/: dash_test.py  demo_dash.py  demo_mss截图工具.py  demo_pywifi.py  mss截图工具.py  pyautogui_test.py  pyautogui鼠标操作.py  pywifi_test.py  socket_test.py  sqlalchemy_test.py
学习第三方包/PyAutoGUI自动化操作/: pyautogui鼠标操作.py
学习第三方包/SQLModel数据库ORM/: demo_01.py  orm_utils.py  sqlmodel_utils.py  test_01.py
学习第三方包/docker容器/: docker_utils.py
学习第三方包/drissionPage自动化工具/: ChromiumPage多模式.py  SessionPage收发数据包.py  demo_web_page.py  web_page_test.py
学习第三方包/elasticsearch/: es_http.py  es_test.py
学习第三方包/faker假数据/: faker_utils.py
学习第三方包/fastapi异步框架/: demo_fastapi.py  demo_fastapi_2.py  main.py  test_fastapi.py  test_fastapi_2.py
学习第三方包/ffmpeg音视频操作/: demo_ffmpeg.py  test_ffmpeg.py
学习第三方包/flask编程/: gevent方式启动.py  异步回调.py  异步回调_celery.py  异步回调_gevent.py
学习第三方包/gevent异步编程/: demo_gevent.py  test_gevent.py
学习第三方包/gitpython仓库操作/: gitpython_utils.py
学习第三方包/httpx异步请求/: demo_httpx.py
学习第三方包/kafka-python消息处理/: admin.py  consumer.py  producer.py  select.py
学习第三方包/locust压测/: demo_locust.py  locust.md  locust_test.py
学习第三方包/markitdown文档转换/: demo_01.py
学习第三方包/matplotlib画图/: demo.py
学习第三方包/opencv图像处理/: 1人脸录入.py  2数据训练.py  3人脸识别.py  4网页视频流.py  Canny边缘检测.py  main.py  人脸识别.py  图像平滑处理-滤波操作.py  图像缩放.py  图像金字塔.py  图像阈值.py  图片人脸识别.py  开运算与闭运算.py  梯度计算.py  滤波处理图像.py  腐蚀与膨胀操作.py  视频、摄像头.py  边缘检测Canny.py
学习第三方包/pandas二维数据分析/: demo_pandas.py  pandas_test.py  多个dataFrame写入同一个sheet.py  查询.py
学习第三方包/passlib密码加密/: demo.py
学习第三方包/pydantic数据校验/: pydantic_01.py  pydantic_02.py  pydantic_03.py  pydantic_test.py
学习第三方包/pyecharts电子图表/: demo_flask.py  demo_pyecharts.py  flask_test.py  pyecharts_test.py
学习第三方包/pymysql数据库操作/: demo_pymysql.py  pymysql_test.py
学习第三方包/pytest测试框架/: __init__.py  conftest.py  pytest.ini  test_payable_order.py
学习第三方包/python-dotenv环境变量/: demo_dotenv.py  python_dotenv_test.py
学习第三方包/python调用js/: demo_execjs.py  execjs_test.py  密码加密.js
学习第三方包/redis缓存/: demo_redis.py  redis_test.py
学习第三方包/selenium页面自动化/: WebHelper.py
学习第三方包/sqlacodegen生成orm代码/: gen_test.py
学习第三方包/sqlalchemy数据库ORM/: dao.py  demo_01.py  orm_utils.py  properties.py  test_01.py
学习第三方包/sqlalchemy数据库关系映射/: dao.py  test_01.py
学习第三方包/tts文字转录音/: demo_pyttsx3.py  test_pyttsx3.py
学习算法/: hanoi.py  study_KNN.py  随机数.py
执行js/: main.py
队列/: 优先队列.py  优先队列2.py
