[project]
name = "study_python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "MyNextWeekend", email = "jinhu007@outlook.com" }
]
dependencies = [
    "locust>=2.25.0",
    "pandas>=2.0.3",
    "numpy>=1.24.4",
    "requests>=2.32.3",
    "flask>=3.0.3",
    "fastapi>=0.115.0",
    "drissionpage>=4.1.0.6",
    "faker>=30.1.0",
    "gevent>=24.2.1",
    "pymysql>=1.1.1",
    "selenium>=4.25.0",
    "sqlalchemy>=2.0.35",
    "opencv-python>=4.10.0.84",
    "pywifi>=1.1.12",
    "pyautogui>=0.9.54",
    "uvicorn>=0.31.0",
    "docker>=7.1.0",
    "gitpython>=3.1.43",
    "kafka-python>=2.0.2",
    "elasticsearch>=8.15.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/study_python"]

# 配置下载源地址
[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"


[tool.ruff.lint]
select = [
    'F',      # Pyflakes
    'E',      # pycodestyle (Error)
    'I',      # isort
    'D',      # pydocstyle
    'UP',     # pyupgrade
    'YTT',    # flake8-2020
    'B',      # flake8-bugbear
    'T10',    # flake8-debugger
    'T20',    # flake8-print
    'C4',     # flake8-comprehensions
    'PYI006', # flake8-pyi
]
ignore = ['D105', 'D107', 'D205', 'D415', 'E501', 'B011', 'B028', 'B904']
flake8-quotes = {inline-quotes = 'single', multiline-quotes = 'double'}
isort = { known-first-party = ['pydantic', 'tests'] }
mccabe = { max-complexity = 14 }
pydocstyle = { convention = 'google' }
