[project]
name = "study_python"
version = "0.1.0"
description = "用于个人学习记录"
requires-python = ">= 3.10"
readme = "README.md"
authors = [
    { name = "MyNextWeekend", email = "jinhu007@outlook.com" }
]

dependencies = [
    "locust>=2.25.0",
    "pandas>=2.0.3",
    "numpy>=1.24.4",
    "requests>=2.32.3",
    "flask>=3.0.3",
    "fastapi[standard]>=0.115.0",
    "drissionpage>=4.1.0.6",
    "faker>=30.1.0",
    "gevent>=24.2.1",
    "pymysql>=1.1.1",
    "selenium>=4.25.0",
    "sqlalchemy>=2.0.35",
    "opencv-python>=4.10.0.84",
    "pywifi>=1.1.12",
    "pyautogui>=0.9.54",
    "uvicorn>=0.31.0",
    "docker>=7.1.0",
    "gitpython>=3.1.43",
    "kafka-python>=2.0.2",
    "elasticsearch>=8.15.1",
    "sqlmodel>=0.0.22",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "sqlacodegen>=3.0.0",
    "cryptography>=44.0.2",
    "markitdown>=0.1.1",
    "pydantic-settings>=2.9.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/study_python"]

# 配置下载源地址
#[tool.uv]
#index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
    "UP006",
]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
